--- a/website/pages/api-docs/index.mdx
+++ b/website/pages/api-docs/index.mdx
@@ -78,6 +78,20 @@ $ curl \
     http://127.0.0.1:8200/v1/ns1/ns2/secret/foo
 ```
 
+## KV stores
+
+If you have a new version of Vault when you create a new KV store it will be a version 2 store and the actuall path to the data will have `/data/` after the KV store name:
+
+```shell-session
+$ curl \
+    -H "X-Vault-Token: f3b09679-3001-009d-2b80-9c306ab81aa6" \
+    -X GET \
+    http://127.0.0.1:8200/v1/secret/data/foo
+```
+
+Other variations in the paths may occur, please see the corresponding [secret engine documentation](https://www.vaultproject.io/docs/secrets)
+
+
 ## API Operations
 
 With few documented exceptions, all request body data and response data from
